--- a/pages/tiendas.html
+++ b/pages/tiendas.html
@@ -23,8 +23,10 @@
         </nav>
     </header>
     <main>
-        <h2>Tiendas</h2>
-        <section>
+        <div id="heroTiendas">
+            <h2>Tiendas</h2>
+        </div>
+        <section id="cardTiendas">
             <div class="card">
                <h3>Tienda La Reina</h3>
                 <img src="../assets/tienda-lareina.jpeg" alt="Tienda La Reina">
