terminando proyecto solo falta formulario

--- a/index.html
+++ b/index.html
@@ -26,9 +26,21 @@
         <section id="hero">
             <h2>Bienvenidos a Delicias Techo</h2>
         </section>
-        <section class="sectionExplora">
-            <h3>Explora Nuestros Productos</h3>
-            <p><a href="./pages/productos.html">Productos</a></p>   
+        <section class="sectionDestacado">
+            <h3>Productos destacados</h3>
+            <section class="sectionProductos">
+                <div class="card">
+                    <h4>Alfajores</h4>
+                    <img src="./assets/alfajores-chocolate.jpeg" alt="alfajores de chocolate">
+                    <span>Ricos alfajores rellenos con manjar, bañados en chocolate semi amargo</span>
+                </div>
+                <div class="card">
+                    <h4>Galletas Glaseadas</h4>
+                    <img src="./assets/galletas-glaseadas.jpeg" alt="Galletas glaseadas">
+                    <span>Galletas de vainilla, glaseadas de merengue suizo</span>
+                </div>
+            </section>
+            <p><a href="./pages/productos.html">Más Productos</a></p>   
         </section>
     </main>
     <footer>
