--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -24,15 +24,30 @@
     </header>
     <main>
         <section>
-            <h2>Nosotros</h2>
-            <img class="bannernosotros" src="../assets/banner-nosotros2.jpeg" alt="banner nosotros">
-            <p>Delicias Techo es una pastelería dedicada a la elaboración de productos artesanales de alta calidad. Fundada en 2022, nuestra misión es endulzar la vida de nuestros clientes con creaciones que combinan ingredientes frescos y de primera calidad, técnicas tradicionales y un toque de innovación.
-             En Delicias Techo, ofrecemos una amplia gama de productos que incluyen alfajores, tortas, cakepops, galletas y cuchuflies, todos preparados con esmero y dedicación. Nos especializamos en la personalización de pasteles para ocasiones especiales como bodas, cumpleaños, aniversarios y eventos corporativos, asegurando que cada creación sea única y memorable.
-            Nos enorgullecemos de ofrecer un servicio al cliente excepcional, desde la atención personalizada en nuestras tiendas hasta la entrega puntual de nuestros productos. En Delicias Techo, nuestro objetivo es crear experiencias dulces y memorables, convirtiéndonos en la elección preferida de nuestros clientes para todas sus celebraciones y antojos cotidianos.</p>
+            <div id="heroNosotros">
+                <h2>Delicioso, fresco y hecho con cariño</h2>
+            </div>
+            <div class="sectionNosotros">
+                <img class="imgNosotros" src="../assets/banner-nosotros2.jpeg" alt="banner nosotros">
+                <p>Delicias Techo es una pastelería dedicada a la elaboración de productos artesanales de alta calidad. Fundada en 2022, nuestra misión es endulzar la vida de nuestros clientes con creaciones que combinan ingredientes frescos y de primera calidad, técnicas tradicionales y un toque de innovación.
+                En Delicias Techo, ofrecemos una amplia gama de productos que incluyen alfajores, tortas, cakepops, galletas y cuchuflies, todos preparados con esmero y dedicación. Nos especializamos en la personalización de pasteles para ocasiones especiales como bodas, cumpleaños, aniversarios y eventos corporativos, asegurando que cada creación sea única y memorable.
+                Nos enorgullecemos de ofrecer un servicio al cliente excepcional, desde la atención personalizada en nuestras tiendas hasta la entrega puntual de nuestros productos. En Delicias Techo, nuestro objetivo es crear experiencias dulces y memorables, convirtiéndonos en la elección preferida de nuestros clientes para todas sus celebraciones y antojos cotidianos.</p>
+            </div>    
         </section>
-        <section>
-            <h3>Explora nuestras delicias</h3>
-            <p><a href="./productos.html">Productos</a></p>
+        <section class="nosotrosTiendas">
+            <h3 class="nuestrasTiendas">Nuestras Tiendas</h3>
+            <section id="cardTiendas">
+                <div class="card">
+                   <h4>Tienda La Reina</h4>
+                    <img src="../assets/tienda-lareina.jpeg" alt="Tienda La Reina">
+                    <span>Tienda ubicada en calle Principe de Gales, comuna de la Reina <br> Teléfono: +569 7894563</span>
+                </div>
+                <div class="card">
+                    <h4>Tienda Macul</h4>
+                    <img src="../assets/tienda-macul.jpeg" alt="Tienda Macul">
+                    <span>Tienda ubicada en calle Rodrigo de Araya, comuna de Macul <br> Teléfono: +569 9876543</span>
+                </div>
+            </section>
         </section>
     </main>
     <footer>
